; ModuleID = '/home/carl/AnghaBench/os-tutorial/21-shell/cpu/extr_isr.c_irq_handler.c'
source_filename = "/home/carl/AnghaBench/os-tutorial/21-shell/cpu/extr_isr.c_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@interrupt_handlers = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @irq_handler(i32 %0) #0 {
  %2 = alloca %struct.TYPE_4__, align 4
  %3 = alloca i32 (i32)*, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  store i32 %0, i32* %4, align 4
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp sge i32 %6, 40
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 @port_byte_out(i32 160, i32 32)
  br label %10

10:                                               ; preds = %8, %1
  %11 = call i32 @port_byte_out(i32 32, i32 32)
  %12 = load i64*, i64** @interrupt_handlers, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i64, i64* %12, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %31

19:                                               ; preds = %10
  %20 = load i64*, i64** @interrupt_handlers, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i64, i64* %20, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = inttoptr i64 %25 to i32 (i32)*
  store i32 (i32)* %26, i32 (i32)** %3, align 8
  %27 = load i32 (i32)*, i32 (i32)** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 %27(i32 %29)
  br label %31

31:                                               ; preds = %19, %10
  ret void
}

declare dso_local i32 @port_byte_out(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
